Huge amount of changes (I am so very lazy when it comes to git commits...)